kubernetes/apps/default/prowlarr/app/route.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/route.openshift.io/route_v1.json
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prowlarr
  labels:
    ingress: grappleberry
spec:
  host: prowlarr.grappleberry.xyz
  port:
    targetPort: 9696
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: prowlarr
    weight: 100
  wildcardPolicy: None
